Changed the interface for Players inside Game: Deque -> List